fix: overflow-x -> hidden

--- a/src/assets/css/suneditor.css
+++ b/src/assets/css/suneditor.css
@@ -206,7 +206,7 @@
 
 /* editor area */
 .sun-editor .sun-editor-id-editorArea {position:static; width:100%; height:auto; overflow:hidden; z-index:1;}
-.sun-editor .sun-editor-id-editorArea .input_editor {width:100%; height:100%; overflow:auto; -webkit-overflow-scrolling:touch; user-select:text; -o-user-select:text; -moz-user-select:text; -khtml-user-select:text; -webkit-user-select:text; -ms-user-select:text;}
+.sun-editor .sun-editor-id-editorArea .input_editor {width:100%; height:100%; overflow-y:auto; overflow-x:hidden; -webkit-overflow-scrolling:touch; user-select:text; -o-user-select:text; -moz-user-select:text; -khtml-user-select:text; -webkit-user-select:text; -ms-user-select:text;}
 .sun-editor .sun-editor-id-editorArea .input_editor:focus {outline:none;}
 .sun-editor .sun-editor-id-editorArea .sun-editor-id-code {background-color:#191919; color:#fff; font-family: Helvetica Neue, sans-serif; font-size:13px; word-break:break-all; padding:0; margin:0;}
 
